<resources>
    <string name="app_name">Anubhuti</string>
    <string name="knit">KNIT Sultanpur</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_team">TeamActivity</string>
    <string name="rules_button_text">Rules</string>
    <string name="Rs">\u20B9</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="event">Events</string>
    <string name="event_registration">Events Reg.</string>
    <string name="about">About us</string>
    <string name="sponsor">Sponsors</string>
    <string name="team">Team</string>
    <string name="ticket">Tickets</string>
    <string name="map">Map</string>
    <string name="contribute">Contribute</string>
    <string name="login">Log In</string>
    <string name="event_dance">Thirak</string>
    <string name="event_sing">Saptak</string>
    <string name="event_drama">Concouractus</string>
    <string name="event_arts">Sanat</string>
    <string name="event_photography">Chhavi-Srijan</string>
    <string name="event_quiz">Armageddon</string>
    <string name="event_literary">Pranninad</string>
    <string name="event_lan">LAN Gaming</string>
    <string name="event_informal">Informals</string>
    <string name="event_dance_type">Dancing</string>
    <string name="event_sing_type">Singing</string>
    <string name="event_drama_type">Drama</string>
    <string name="event_arts_type">Fine Arts</string>
    <string name="event_photography_type">Photography</string>
    <string name="event_quiz_type">Quiz</string>
    <string name="event_literary_type">Literary</string>
    <string name="event_lan_type">LAN Gaming</string>
    <string name="event_informal_type">Informals</string>
    <string name="register_button">Register</string>
    <string name="call">Call</string>
    <string name="mail">E-Mail</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_anubhuti">Kamla Nehru Institute of Technology, Sultanpur presents its 2017
        edition of Anubhuti from 17th to 20th February. Anubhuti, the majestic spectacle of KNIT,
        Sultanpur. The palatial celebration of vibrant colors from our culture. A congenial event
        with exciting, entertaining and enticing episodes in its clutch.\nIf one were to judge
        college festivals simply by the nature of how fast they grow, Anubhuti would probably stand
        unparalleled in Uttar Pradesh. Ever since its inception in 2015, it has gone to become one
        of the biggest and highly anticipated cult fests in the region.\nSo what makes Anubhuti
        special? You would ask. What makes it stand out from amongst the thousands that are already
        there? Is it the wave after wave of participation, coming from each corner and even beyond,
        all participating into close to 40 events spanning 7 Categories-Dance, Drama, Music,
        Literary, Quiz, Fine Arts and photography? Or the full force of students brought down to a
        single location through a variety of stalls, exhibitions and performances. The Special
        Nights, the pinnacle of the extravaganza, previously having witnessed the likes of Gajendra
        Verma, Dinesh Raghuvanshi, Mumtaz Naseem, Kirti Kale and The Loons Band.\nThis year,
        Anubhuti\’17, honoring the \‘Royal\’ theme and tagline of Perfect is Boring, is going to be
        organized on an even larger scale, with ongoing talks of several international performances,
        a distinguished platter of exotic celebrities and experts in line to judge the various
        events. We also promise to come alive this year with a host of informals, exhibitions and
        stalls, for just about anyone in the fest looking to have the time of their lives.\nSo be
        the Alexander, or be the Leonidas just be the warrior. Muster up to defend the legacy of
        your empire. the kingship is on stake, as it\'s going to be ROYAL affair this time. Partake
        in imperial battle to conquer the throne and establish monumental regime. Come assimilate
        with us. Relish, win and create memories with us. Click selfie and groove on. Embark the
        regal warrior for battle of swords.\n\nBe Royal, Be a knight.\n </string>
    <string name="title_activity_sub_events">SubEventsActivity</string>
    <string name="content_description">Content Description</string>
    <string name="days">days</string>
    <string name="hours">hrs</string>
    <string name="minutes">mins</string>
    <string name="seconds">secs</string>
    <string-array name="dance_event_names">
        <item>About</item>
        <item>Masquerade</item>
        <item>Estampie</item>
        <item>Duo</item>
        <item>Continuum Dance</item>
        <item>Carefree</item>
    </string-array>
    <string-array name="dance_event_type">
        <item> </item>
        <item>Group Dance</item>
        <item>Solo Dance</item>
        <item>Duet Dance</item>
        <item>Online Event</item>
        <item>Informals</item>
    </string-array>
    <string-array name="dance_event_details">
        <item>Dance, dance for the fun is easy. The tune is catching and will not stop. Dance, till
            the stars come down from the rafters. Dance, dance, dance till you drop. Be it
            bollywood, western, contemporary, jazz, salsa, hip-hop or what not just put on your
            dancing shoes and hit the floor.
        </item>
        <item>\u2022 It is a group dance event. It is a 2 round event.\n
            \u2022 The group can be formed of minimum 5 members and maximum 20 members.\n
            \u2022 At least 5 members must be present on the stage at a time.\n\n
            \u2022 <b>Round 1:</b>\nThe groups have to show their 3 minutes performance for qualifying round.
            This performance should be the part of their complete performance.\n\n
            \u2022 <b>Round 2:</b>\nIt is the final round in which the groups have to show their complete
            performance of 8-12 minutes.\n\n
            <b>Judging Criteria:</b>\n\nThere will be extra marks for theme based performances, use of props,
            formations, stunts , coordination and stage utilization.\n\n\n
            <b>Event organizers:</b>\n
            Name(Contact)\n
            Name(Contact)
        </item>

        <item>\u2022 There will be 3 rounds in this event where participants will show their dance
            forms individually.\n
            \u2022 Dance forms can vary from western hip hop to typical freestyle bollywood to folk
            to classical.\n\n
            \u2022 <b>Round 1:</b>\nParticipants will have to perform for 1:30-2 minutes.\n
            \u2022 <b>Round 2:</b>\nThe complete performance of 3-4 minutes of the qualified participants
            will be judged.\n
            \u2022 <b>Round 3:</b>\nThis will be a face-off between any two randomly chosen participants with
            music given on the spot. The music track of the two participants will be mixed
            accordingly, switching from one participant to another.\n\n
            <b>Judging Criteria:</b>\n\nThere will be extra marks for theme based performances,
            use of props, stage utilization, expressions, energy level, costumes. Any kind of
            fusion will be encouraged.\n\n\n
            <b>Event organizers:</b>\n
            Name(Contact)\n
            Name(Contact)
        </item>

        <item>\u2022 In this event dance will be performed in pair.\n
            \u2022 Dance forms can vary from western hip-hop to freestyle bollywood.\n\n
            \u2022 <b>Round 1:</b>\nIt is the qualifying round. Pairs have to perform for 1:30-2 mins.\n
            \u2022 <b>Round 2:</b>\nIt is a prop round where each pair will be given a prop. They will be
            given 24 hours to add a small portion of dance using that prop in their complete
            performance. The time for the utilization of prop can vary and judging will be done
            on the basis of best utilization of prop. Total time for the  performance is
            4-5 minutes.\n\n
            <b>Judging Criteria:</b>\n\nThere will be extra marks for story, proper utilization of
            props, compatibility, rhythm, lifts, chemistry, and costumes.\n\n\n
            <b>Event organizers:</b>\n
            Name(Contact)\n
            Name(Contact)
        </item>

        <item>It is an online event open to all. Anyone who wants to show his/her dance talent can
            upload his/her video performing on any song for about 1:30-2 min.\n
            \u2022 The selected contestants have to gather as many people as they can and have to upload
            another video performing on that same song with their whole group this time.\n\n
            <b>There will be no registration fee for the winning performer!!!</b>\n\n\n
            <b>Event organizers:</b>\n
            Name(Contact)\n
            Name(Contact)
        </item>

        <item>Here participants have to perform on any random song played by the organizing team.
            The team will pick up any random participant at first, after their performance they have
            to challenge any other contestant and in the same manner the event will continue.\n\n\n
            <b>Event organizers:</b>\n
            Name(Contact)\n
            Name(Contact)
        </item>
    </string-array>
    <string-array name="dance_event_prize_amount">
        <item> </item>
        <item>\u20B90</item>
        <item>\u20B90</item>
        <item>\u20B90</item>
        <item>\u20B90</item>
        <item>\u20B90</item>
    </string-array>
    <string-array name="dance_event_date">
        <item> </item>
        <item>Feb 17, 2017</item>
        <item>Feb 17, 2017</item>
        <item>Feb 17, 2017</item>
        <item>Feb 17, 2017</item>
        <item>Feb 17, 2017</item>
    </string-array>
    <string-array name="dance_event_time">
        <item> </item>
        <item>05:10 PM</item>
        <item>11:10 AM</item>
        <item>07:11 PM</item>
        <item>4:15 AM</item>
        <item>06:15 PM</item>
    </string-array>
    <string-array name="dance_contact1">
        <item>Contact name</item>  
        <item>0123456789</item>  
    </string-array>
    <string-array name="dance_contact2">
        <item>Contact name</item>
        <item>0123456789</item>
    </string-array>
    <string-array name="singing_event_names">
        <item>About</item>
        <item>Ekal</item>
        <item>Jugalbandi</item>
        <item>Atantra</item>
        <item>Anuved</item>
    </string-array>
    <string-array name="singing_event_type">
        <item> </item>
        <item>Solo Singing</item>
        <item>Duet</item>
        <item>Unplugged</item>
        <item>Band</item>
    </string-array>
    <string name="name_hint">Name</string>
    <string name="email_hint">E-mail</string>
    <string name="contact_hint">Contact No.</string>
    <string name="college_hint">College</string>
    <string name="gender">Gender</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="academic_year_title">Year</string>
    <string name="academic_year_first">First Year</string>
    <string name="academic_year_second">Second Year</string>
    <string name="academic_year_third">Third Year</string>
    <string name="academic_year_final">Final Year</string>
    <string name="button_submit">Submit</string>
</resources>