<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_event"
            android:title="@string/event" />
        <!--<item-->
            <!--android:id="@+id/nav_event_registration"-->
            <!--android:icon="@drawable/ic_event_register"-->
            <!--android:title="@string/event_registration"/>-->
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_menu_schedule"
            android:title="@string/schedule" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_about"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_team"
            android:icon="@drawable/ic_menu_team"
            android:title="@string/team"/>
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/map" />
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_register"
            android:title="@string/login" />

    </group>

<!--    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>  -->

</menu>
